--- a/style.css
+++ b/style.css
@@ -36,3 +36,35 @@ li {
     font-size: 1.2rem;
     color: #F3F4F8;
 }
+
+.text-pizza {
+    margin-top:4rem;
+    margin-left: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.text-subtitle {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 1.4rem;
+    color: #101223;
+}
+
+.text-main {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+    color: #101223;
+}
+
+.pizza-img {
+    height: 10rem;
+    width: 10rem;
+    object-fit: cover;
+    border: none;
+    border-radius: 10px;
+    margin-left: 4rem;
+    margin-top: 4rem;
+}
