--- a/style.css
+++ b/style.css
@@ -80,3 +80,12 @@ li {
     color: rgba(255, 255, 255, 0.1);
     object-fit: cover;
 }
+
+.cardapio-title {
+    margin-top: 15px;
+    margin-left: 30%;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 1.4rem;
+    color: #7b0408;
+}
