--- a/style.css
+++ b/style.css
@@ -82,10 +82,25 @@ li {
 }
 
 .cardapio-title {
-    margin-top: 15px;
-    margin-left: 30%;
+    position: absolute;
+    margin-top: 450px;
+    text-align: center;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
+    font-weight: 500;
     font-size: 1.4rem;
     color: #7b0408;
+}
+
+.anount {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+
+.logo-img {
+    position: absolute;
+    height: 275px;
+    margin-top: 100px;
 }
