--- a/style.css
+++ b/style.css
@@ -104,3 +104,13 @@ li {
     height: 275px;
     margin-top: 100px;
 }
+
+.list-cardapio {
+    list-style: circle;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 1.4rem;
+    color: #000000;
+    margin-top: 290px;
+    text-align: center;
+}
